--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-socket.io": "^8.4.3",
     "@nestjs/typeorm": "^8.0.3",
+    "@nestjs/websockets": "^8.4.3",
     "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "hbs": "^4.2.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
